crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_comment_with_continuation.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Comment:\t"
- kind: TextSegment
  text: This is a long comment
- kind: Continuation
  text: "\n\t"
- kind: TextSegment
  text: that continues here
- kind: Newline
  text: "\n"
