crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_id_content_isolated.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: "IdFields { language: \"eng\", corpus: \"corpus\", speaker: \"CHI\", age: \"3;0\", sex: \"female\", group: \"typical\", ses: \"\", role: \"Child\", education: \"\", custom: \"\" }"
  text: eng
- kind: Newline
  text: "\n"
