crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_id_full.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@ID:\t"
- kind: "IdFields { language: \"eng\", corpus: \"corpus\", speaker: \"CHI\", age: \"3;00.\", sex: \"female\", group: \"typical\", ses: \"\", role: \"Child\", education: \"\", custom: \"\" }"
  text: eng
- kind: Newline
  text: "\n"
