crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_languages.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: HeaderPrefix
  text: "@Languages:\t"
- kind: LanguageCode
  text: eng
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: LanguageCode
  text: fra
- kind: Comma
  text: ","
- kind: Whitespace
  text: " "
- kind: LanguageCode
  text: zho
- kind: Newline
  text: "\n"
