crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_main_tier_annotations.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: Star
  text: "*"
- kind: Speaker
  text: CHI
- kind: TierSep
  text: ":\t"
- kind: "Word { raw_text: \"the\", prefix: None, body: \"the\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: the
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"the\", prefix: None, body: \"the\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: the
- kind: Whitespace
  text: " "
- kind: RetracePartial
  text: "[/]"
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"dog\", prefix: None, body: \"dog\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: dog
- kind: Whitespace
  text: " "
- kind: ExplanationAnnotation
  text: puppy
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
