crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_main_tier_ca.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: Star
  text: "*"
- kind: Speaker
  text: SPK
- kind: TierSep
  text: ":\t"
- kind: "Word { raw_text: \"rising\", prefix: None, body: \"rising\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: rising
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"to\", prefix: None, body: \"to\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: to
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"high\", prefix: None, body: \"high\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: high
- kind: Whitespace
  text: " "
- kind: RisingToHigh
  text: ⇗
- kind: Newline
  text: "\n"
