crates/talkbank-re2c-parser/tests/snapshots/snapshot_tests__snapshot_main_tier_simple.snap
---
source: crates/talkbank-re2c-parser/tests/snapshot_tests.rs
expression: tokens
---
- kind: Star
  text: "*"
- kind: Speaker
  text: CHI
- kind: TierSep
  text: ":\t"
- kind: "Word { raw_text: \"hello\", prefix: None, body: \"hello\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: hello
- kind: Whitespace
  text: " "
- kind: "Word { raw_text: \"world\", prefix: None, body: \"world\", form_marker: None, lang_suffix: None, pos_tag: None }"
  text: world
- kind: Whitespace
  text: " "
- kind: Period
  text: "."
- kind: Newline
  text: "\n"
